Date - <TBA>
Release Number - v1.5.1

Description - This version is a minor release with changes to clinical annotation and the underlying table structure to cleanup
depricated tables/fields.

=======================================================================================

Module - Inventory


* Add inventorymanagement help messages.


=======================================================================================

Module - Clinical

* CHANGE (Eventum #436) - Added value 'Pager' to the Telephone Type field lookup list.

=======================================================================================

Module - Storage Layout


* Add storagelayout help messages.